//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id Int [pk, increment]
  email String [unique, not null]
  name String [not null]
  picture String [not null, default: 'https://www.gravatar.com/avatar/00000000000000000000000000000000?d=mp&f=y']
  jwtToken String
  expoToken String
  isOnBoarded Boolean [not null]
  userTags UserTag [not null]
  clubCoordinator ClubCoordinator [not null]
  clubMember ClubMember [not null]
  subscription Subscription [not null]
  rsvpEvent RSVPEvent [not null]
  votes Vote [not null]
  positions Position [not null]
  userNotifications UserNotification [not null]
  studentRank StudentRank
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
}

Table Club {
  id Int [pk, increment]
  name String [not null]
  description String [not null]
  links String [not null]
  image String [not null, default: 'https://www.gravatar.com/avatar/']
  clubtags ClubTag [not null]
  clubCoordinator ClubCoordinator [not null]
  clubMember ClubMember [not null]
  subscription Subscription [not null]
  clubEvents ClubEvent [not null]
  clubNotifications ClubNotification [not null]
  clubRank ClubRank
  otp OTP
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
}

Table Event {
  id Int [pk, increment]
  name String [not null]
  description String [not null]
  image String [not null, default: 'https://www.gravatar.com/avatar/']
  link String
  deadline DateTime
  eventStartDate DateTime
  eventEndDate DateTime
  venue String
  votes Vote [not null]
  rsvpEvent RSVPEvent [not null]
  postions Position [not null]
  clubEvents ClubEvent [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
}

Table Tag {
  id Int [pk, increment]
  name String [not null]
  clubTags ClubTag [not null]
  userTags UserTag [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
}

Table Position {
  id Int [pk, increment]
  event Event [not null]
  eventId Int [not null]
  position String [not null]
  user User [not null]
  userId Int [not null]
  money Int
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
}

Table StudentRank {
  id Int [pk, increment]
  user User [not null]
  userId Int [unique, not null]
  rank Int [not null]
  eventCount Int [not null]
  moneyEarned Int [not null]
  firstCount Int [not null]
  secondCount Int [not null]
  thirdCount Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
}

Table ClubRank {
  id Int [pk, increment]
  club Club [not null]
  clubId Int [unique, not null]
  rank Int [not null]
  eventCount Int [not null]
  moneyAwarded Int [not null]
  rsvpCount Int [not null]
  upVoteCount Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
}

Table OTP {
  id Int [pk, increment]
  club Club [not null]
  clubId Int [unique, not null]
  otp String [not null]
  expiredAt DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
}

Table Notification {
  id Int [pk, increment]
  userNotifications UserNotification [not null]
  createdBy ClubNotification [not null]
  message String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
}

Table ClubNotification {
  id Int [pk, increment]
  club Club [not null]
  clubId Int [not null]
  notification Notification [not null]
  notificationId Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime

  indexes {
    (clubId, notificationId) [unique]
  }
}

Table ClubEvent {
  id Int [pk, increment]
  club Club [not null]
  clubId Int [not null]
  event Event [not null]
  eventId Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime

  indexes {
    (clubId, eventId) [unique]
  }
}

Table ClubTag {
  id Int [pk, increment]
  club Club [not null]
  clubId Int [not null]
  tag Tag [not null]
  tagId Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime

  indexes {
    (clubId, tagId) [unique]
  }
}

Table UserTag {
  id Int [pk, increment]
  user User [not null]
  userId Int [not null]
  tag Tag [not null]
  tagId Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]

  indexes {
    (userId, tagId) [unique]
  }
}

Table UserNotification {
  id Int [pk, increment]
  notification Notification [not null]
  notificationId Int [not null]
  user User [not null]
  userId Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime

  indexes {
    (notificationId, userId) [unique]
  }
}

Table ClubCoordinator {
  id Int [pk, increment]
  club Club [not null]
  clubId Int [not null]
  user User [not null]
  userId Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime

  indexes {
    (clubId, userId) [unique]
  }
}

Table ClubMember {
  id Int [pk, increment]
  club Club [not null]
  clubId Int [not null]
  user User [not null]
  userId Int [not null]
  level Int [not null, default: 0]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime

  indexes {
    (clubId, userId) [unique]
  }
}

Table Subscription {
  id Int [pk, increment]
  club Club [not null]
  clubId Int [not null]
  user User [not null]
  userId Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime

  indexes {
    (clubId, userId) [unique]
  }
}

Table RSVPEvent {
  id Int [pk, increment]
  eventId Int [not null]
  event Event [not null]
  userId Int [not null]
  user User [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime

  indexes {
    (eventId, userId) [unique]
  }
}

Table Vote {
  id Int [pk, increment]
  vote Boolean [not null]
  eventId Int [not null]
  event Event [not null]
  userId Int [not null]
  user User [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime

  indexes {
    (eventId, userId) [unique]
  }
}

Ref: Position.eventId > Event.id

Ref: Position.userId > User.id

Ref: StudentRank.userId - User.id

Ref: ClubRank.clubId - Club.id

Ref: OTP.clubId - Club.id

Ref: ClubNotification.clubId > Club.id

Ref: ClubNotification.notificationId > Notification.id

Ref: ClubEvent.clubId > Club.id

Ref: ClubEvent.eventId > Event.id

Ref: ClubTag.clubId > Club.id

Ref: ClubTag.tagId > Tag.id

Ref: UserTag.userId > User.id

Ref: UserTag.tagId > Tag.id

Ref: UserNotification.notificationId > Notification.id

Ref: UserNotification.userId > User.id

Ref: ClubCoordinator.clubId > Club.id

Ref: ClubCoordinator.userId > User.id

Ref: ClubMember.clubId > Club.id

Ref: ClubMember.userId > User.id

Ref: Subscription.clubId > Club.id

Ref: Subscription.userId > User.id

Ref: RSVPEvent.eventId > Event.id

Ref: RSVPEvent.userId > User.id

Ref: Vote.eventId > Event.id

Ref: Vote.userId > User.id